# locus

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Cargo.toml  LICENSE.ja.md  README.ja.md  README.md  auth.ts  build.rs  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.base.json  vitest.config.ts
.ai/spec/: 200.md  201.md  202.md  203.md  204.md  205.md  216.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: mvp.ja.md  mvp.md
docs/adr/: 0001-prototype-first-mvp.ja.md  0001-prototype-first-mvp.md  0002-web-first-nextjs-typescript.ja.md  0002-web-first-nextjs-typescript.md  0003-layered-server-architecture.ja.md  0003-layered-server-architecture.md  0004-semantic-change-ir.ja.md  (+3 more)
e2e/: ai-suggestion-display.spec.ts  analysis-job-lifecycle.spec.ts  connection-oauth-flow.spec.ts  global-setup.ts  review-group-navigation.spec.ts  workspace-smoke.spec.ts
scripts/: dogfooding-metrics.mjs  dogfooding-metrics.mjs.d.ts  dogfooding-metrics.test.mjs  evaluate-ai-suggestions-multi-provider.mjs  evaluate-ai-suggestions.mjs  evaluate-ai-suggestions.test.mjs  export-ai-suggestion-evaluation-artifacts.mjs  export-ai-suggestion-evaluation-artifacts.test.mjs  export-dogfooding-metrics-artifacts.mjs  export-dogfooding-metrics-artifacts.test.mjs  manage-demo-data.mjs  migration-apply-verify.mjs  migration-dry-run.mjs  run-dogfooding-session.mjs  security-sanity-checks.mjs  security-sanity-checks.test.mjs
src/: config.rs  i18n.rs  main.rs
ui/: app.slint
(+384 files in other folders)
