[package]
name = "locus"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "=0.26.0"
arboard = "3.6.1"
chrono = { version = "0.4.44", features = ["std"] }
futures = "0.3.32"
http = "1.4.0"
octocrab = "0.49.7"
portable-pty = "0.9.0"
similar = "3.1.0"
slint = "1.15.1"
tokio = { version = "1.52.0", features = ["rt-multi-thread", "macros"] }
which = "8.0.2"

[build-dependencies]
slint-build = "1.15.1"
